# DetectobjR

./: Cargo.toml  Dockerfile  app.py  requirements.txt
.github/workflows/: deploy.yml
src/: detection.rs  main.rs  web.rs
src/processing/models/static/: index.html
