[package]
name = "opencv-rust-detection"
version = "0.1.0"
edition = "2021"

[dependencies]
opencv = { version = "0.66", features = ["opencv-43"] }
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
serde_json = "1.0"
thiserror = "1.0"
bytes = "1.0"
